media/emby/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emby
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  serviceName: emby
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      volumes:
      - name: emby
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:emby
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: transcode
        emptyDir:
          medium: Memory
      containers:
      - name: emby
        image: emby/embyserver:4.4.0.4
        resources:
          limits:
            gpu.intel.com/i915: 1
        volumeMounts:
        - name: emby
          subPath: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
          readOnly: true
        ports:
        - name: emby
          containerPort: 8096
        readinessProbe:
          tcpSocket:
            port: emby
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: emby
          initialDelaySeconds: 15
          periodSeconds: 20
