media/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  selector:
    app: emby
  type: LoadBalancer
  loadBalancerIP: 192.168.10.4
  externalTrafficPolicy: Local
  ports:
  - name: emby
    port: 8096
