media/emby/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emby
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - m.desertbluffs.com
  rules:
  - host: m.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: emby
          servicePort: 8920
