media/emby/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: emby
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: emby
  ingress:
  - ports:
    - port: 8920
    from: []
